<?xml version="1.0"?>
<package>
  <name>FisheyeDev</name>
  <version>0.0.1</version>
  <description>FisheyeDev</description>
  <license>Apache 2.0</license>

  <maintainer email="hecheng.zhao@outlook.com">Kevin ZHAO</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <export>
    <build_type>cmake</build_type>
  </export>
</package>
